# SpeechRecognition-Sample

./: .gitignore  .gitmodules  README.md
asr-client/: .eslintrc.js  AmiVoice.ts  GoogleSpeechToText.ts  SpeechRecognitionBase.ts  SpeechRecognitionEventBase.ts  amivoice.ts  audioworklet.d.ts  google-speech-to-text.ts  index.ts  opus.wasm  package-lock.json  package.json  speech-recognition-base.ts  tsconfig.json  vad-encoder.worklet.ts
example/: .eslintrc.js  .prettierrc.json  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/public/: index.html
native/: Makefile  opus.hack.patch
proxy-server/: pyproject.toml
proxy-server/asr_proxy_server/: __init__.py  asr_endpoint.py  dummy_engine.py  engine_base.py  google_speech_to_text.py  libogg.py  libopus.py  opus.py
