[tool.poetry]
name = "asr-proxy-server"
version = "0.1.0"
description = ""
authors = ["Kazuki Oikawa <k@oikw.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"

[tool.poetry.dev-dependencies]
flask = "^1.1.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
