[tool.poetry]
name = "asr-proxy-server"
version = "0.1.0"
description = ""
authors = ["Kazuki Oikawa <k@oikw.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
google-cloud-speech = "^1.3.2"
grpcio = "^1.31.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
