[tool.poetry]
name = "asr-proxy-server"
version = "0.1.0"
description = ""
authors = ["Kazuki Oikawa <k@oikw.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
google-cloud-speech = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-quotes = "^3.2.0"

[tool.isort]
multi_line_output = 4
force_sort_within_sections = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
